# seamless-point-ui

./: .gitignore  CMakeLists.txt  Makefile  README.md  lv_conf.h  main.c
ui/: CMakeLists.txt  Makefile  filelist.txt  ui.c  ui.h  ui_clients.c  ui_clients.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui/components/: ui_comp_hook.c
ui/images/: ui_img_1265400908.c  ui_img_bt2_png.c  ui_img_off2_png.c  ui_img_on2_png.c
ui/screens/: ui_device.c  ui_idle.c
